[package]
authors = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
categories = [
  "algorithms",
  "data-structures",
]
description = "A package for Datastructures and Algorithms."
documentation = "https://docs.rs/dsalgo"
edition = "2021"
homepage = "https://kagemeka.github.io/dsalgo_rust"
keywords = ["algorithms", "data-structures"]
license-file = "LICENSE"
name = "dsalgo"
readme = "README.md"
repository = "https://github.com/kagemeka/dsalgo_rust"
rust-version = "1.58.1"
version = "0.2.13"
# workspace = "."
build = false # "scripts/build.rs"
# default-run = "main"
exclude = [
  "/docker/",
  "/scripts/",
]
include = []

[dependencies]

# [workspace]
# members = []
