[package]
authors = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
categories = [
  "algorithms",
  "data-structures",
]
description = "A package for Datastructures and Algorithms."
documentation = "https://docs.rs/dsalgo"
edition = "2021"
homepage = "https://kagemeka.github.io/dsalgo_rust"
keywords = ["algorithms", "data-structures"]
license-file = "LICENSE"
name = "dsalgo"
readme = "README.md"
repository = "https://github.com/kagemeka/dsalgo_rust"
rust-version = "1.63.0"
version = "0.3.2"
# workspace = "."
build = false # "scripts/build.rs"
# default-run = "main"
exclude = [
  "/docker/",
  "/scripts/",
]
include = []

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
# [workspace]
# members = []
